versioned_docs/version-4.0/user/general/overview.md
---
sidebar_position: 10
id: overview
title: Overview
description: Overview of the web user interface
draft: false
---

# OpenCloud - Overview of the web user interface

The OpenCloud web interface consists of several areas that help you to work efficiently with files and settings

<img src={require("./img/overview/overview.png").default} alt="Overview" width="1920"/>

## 1. Left Sidebar

The sidebar contains the navigation elements such as Spaces, Files, Shares and Settings.

## 2. App Switcher

The menu in the top left corner allows you to switch between different Apps and modules.

## 3. Top Bar

The top bar contains important functions such as the search bar, user actions and global settings.

## 4. Search Bar

Allows you to quickly find files, folders or spaces.

## 5. Files List

Displays all files and folders in a selected view.

## 6. Breadcrumb Menu

Shows the current path of your navigation and allows you to quickly jump back to previous directories.

## 7. Batch Actions

Allows you to edit, move or delete several selected files at the same time.

## 8. View Modes

Provides various display options for the file list:

- List view
- Tile view
- Condensed view

## 9. View Settings

Here you can customize additional display options such as sorting or column selection.

## 10. User Menu

    Click on your profile picture in the top right corner to access Settings, Logout and Account Options.

## 11. Right Sidebar

    Shows additional information and panels for shares, activities or file details.

## 12. Actions

    Here you will find Actions such as Download, Share, Delete or Edit for selected files.

## 13. Three-Dot Menu

    Provides further options for files, folders or spaces.

## 14. Actions Panel

    Shows possible actions for the selected file, e.g. rename or move.

## 15. Shares Panel

    Here you can share files and folders internally or externally and manage permissions.

## 16. Versions

    Shows an overview of the versions of a selected file or folder.

## 17. Activity Panel

    Shows an overview of changes and activities within a space or file.

## 18. Context Menu

    Right-clicking on a file or folder opens the context menu with specific options.
